--- a/Loruki/index.html
+++ b/Loruki/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="css/utilities.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Loruki | Cloud Hosting For Everyone</title>
 </head>
 
@@ -33,9 +33,7 @@
         <div class="container grid">
             <div class="showcase-text">
                 <h1>Easier Deployment</h1>
-                <p>Deploy web apps of all kinds, from large scale enterprise APIs to static websites for individuals.
-                    Fill
-                    out the form to try a demo of our platform</p>
+                <p>Deploy web apps of all kinds, from large scale enterprise APIs to static websites for individuals. Fill out the form to try a demo of our platform</p>
                 <a href="features.HTML" class="btn btn-outline">Read More</a>
             </div>
 
@@ -61,8 +59,7 @@
     <section class="stats">
         <div class="container">
             <h3 class="stats-heading text-center my-1">
-                Welcome to the best platform for building applicaitons of all types with modern architecture and
-                scaling.
+                Welcome to the best platform for building applicaitons of all types with modern architecture and scaling.
             </h3>
 
             <div class="grid grid-3 text-center my-4">
@@ -82,6 +79,34 @@
                     <p class="text-secondary">Projects</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!--Cli-->
+    <section class="cli">
+        <div class="container grid">
+            <img src="images/images/cli.png" alt="">
+            <div class="card">
+                <h3>Easy to use, cross platform CLI</h3>
+            </div>
+            <div class="card">
+                <h3>Deploy in seconds</h3>
+            </div>
+
+        </div>
+    </section>
+
+    <!--Cloud-->
+    <section class="cloud bg-primary my-2 py-2">
+        <div class="container grid">
+            <div class="text-center">
+                <h2 class="lg">
+                    Extreme Cloud Hosting
+                </h2>
+                <p class="lead my-1">Cloud hosting like you've never seen. Fast, efficient and scalable</p>
+                <a href="features.html" class="btn btn-dark">Read More</a>
+            </div>
+            <img src="images/images/cloud.png" alt="">
         </div>
     </section>
 </body>
